<resources>
    <string name="app_name">Proyecto_Catedra_ComedorApp_DSM</string>
    <string name="cargando" />
    <string name="logout">Cerrar sesión</string>
    <string name="regresar">Regresar</string>
    <string name="logo_description">Logo de la aplicación</string>
    <string name="cerrarSesionText">Cerrar Sesión</string>
    <string name="saludoDelDia">¡Bienvenido!</string>
    <string name="usuarioNombre">Administrador</string>
    <string name="conteoPlatillosBienvenida">Has ingresado 5 platillos por el momento</string>
    <string name="subTitulo_IngresoPLatillos">Comidas Ingresadas</string>
    <string name="titulo_AgregarComida">Agregar Comida +</string>
    <string name="previsualizarImagen">Previsualizar Imagen</string>

    //Login strings
    <string name="content_description_logo">Logo de la aplicación</string>
    <string name="content_description_banner">Imagen con platillos de comida</string>
    <string name="login_text">Inicia sesión como administrador</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="button_text">Iniciar sesión</string>
    <string name="forget_pass"><u>¿Olvidaste tu contraseña?</u></string>

    //Comida Item
    <string name="imagen_de_la_comida">Imagen de la comida</string>
    <string name="nombre_de_la_comida">Nombre de la Comida</string>
    <string name="precio_de_la_comida">$</string>
    <string name="Descripción">Descripción</string>


</resources>