<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_peach"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imgLogin"
        android:layout_width="wrap_content"
        android:layout_height="219dp"
        android:contentDescription="@string/content_description_banner"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/food_login" />

    <ImageView
        android:id="@+id/imglogo"
        android:layout_width="277dp"
        android:layout_height="147dp"
        android:layout_gravity="center"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="18dp"
        android:contentDescription="@string/content_description_logo"
        app:srcCompat="@drawable/logo" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/card_view_color"
        app:cardCornerRadius="30dp">

        <TextView
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:textColor="@color/text_color_pale"
            android:text="@string/login_text"
            android:textSize="19.3sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="278dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="89dp"
            android:layout_marginHorizontal="25dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edit_text_style"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="278dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="145dp"
            android:layout_marginHorizontal="25dp"
            android:autofillHints="password"
            android:background="@drawable/edit_text_style"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="208dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="29dp"
            android:backgroundTint="@color/color_button_orange"
            android:text="@string/button_text"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/inicio_sesion_icon"
            android:drawableTint="@color/white"
            android:textSize="20sp"/>

    </androidx.cardview.widget.CardView>


</LinearLayout>