<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fondo">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorbarra"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_orange_Button"
                android:gravity="center"
                android:text="@string/cerrarSesionText"
                android:textColor="@color/white"
                app:cornerRadius="16dp" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="100dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/interblackfont"
                    android:text="@string/saludoDelDia"
                    android:textAlignment="center"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.9"
                android:orientation="vertical">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/interitalicbold"
                    android:text="@string/usuarioNombre"
                    android:textAlignment="textStart"
                    android:layout_marginLeft="30dp"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/regularinterfont"
                        android:text="@string/conteoPlatillosBienvenida"
                        android:textAlignment="textStart"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="15dp"
                        android:textColor="@color/color_gray"
                        android:textSize="15sp" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/saludo_tiempoDia"
                android:layout_width="match_parent"
                android:layout_height="150dp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="429dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="301dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:fontFamily="@font/regularinterfont2"
                    android:text="@string/subTitulo_IngresoPLatillos"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="165dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/green_button"
                    android:gravity="center"
                    android:text="@string/titulo_AgregarComida"
                    android:textColor="@color/white"
                    app:cornerRadius="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">
                <com.google.android.material.button.MaterialButton
                    android:layout_width="110dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/color_orange_Button"
                    android:gravity="center"
                    android:text="@string/regresar"
                    android:textColor="@color/white"
                    app:cornerRadius="16dp"
                    android:layout_marginRight="10dp"
                    />
                <com.google.android.material.button.MaterialButton
                    android:layout_width="110dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/color_orange_Button"
                    android:gravity="center"
                    android:text="@string/regresar"
                    android:textColor="@color/white"
                    app:cornerRadius="16dp"
                    />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            >
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>